--- a/src/apps/content-editor/src/app/views/CSVImport/Columns/Columns.less
+++ b/src/apps/content-editor/src/app/views/CSVImport/Columns/Columns.less
@@ -2,10 +2,10 @@
 .TableHeader {
   display: flex;
   z-index: 1;
+  overflow: auto;
 
   .wrap {
-    background: #4c5568;
-    border-bottom: 1px solid #000;
+    background-color: @zesty-grey;
     color: @zesty-white;
     display: flex;
     flex: 1;
@@ -24,7 +24,7 @@
   .Cell {
     display: inline-block;
     min-width: 250px;
-    padding: 4px 16px;
+    padding: 8px 0;
   }
   .PublishedHeader {
     width: 40px;
